# camel-converter

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  justfile  prek.toml  pyproject.toml  tox.ini
.github/: release-draft-template.yaml
.github/workflows/: ci.yaml  ci.yml  pypi_publish.yaml  pypi_publish.yml
camel_converter/: __init__.py  decorators.py  pydantic_base.py
tests/: conftest.py  test_camel_converter.py  test_decorators.py  test_pydantic.py
