[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camel-converter"
dynamic = ["version"]
description = "Converts a string from snake case to camel case or camel case to snake case"
authors = [ { name = "Paul Sanders", email = "paul@paulsanders.dev" } ]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
repository = "https://github.com/sanders41/camel-converter"
homepage = "https://github.com/sanders41/camel-converter"
documentation = "https://github.com/sanders41/camel-converter"
keywords = ["python", "pydantic", "snake-case", "camel-case", "converter"]
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.0.0"]

[tool.uv]
dev-dependencies = [
  "mypy==1.11.2",
  "pre-commit==3.5.0",
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "ruff==0.6.4",
]

[tool.hatch.version]
path = "camel_converter/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=camel_converter --cov-report term-missing --no-cov-on-fail"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
fix = true
target-version = "py39"

[tool.ruff.lint]
select=["E", "B", "F", "T201", "T203", "I001", "UP"]
ignore=[
  # Recommened ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
